--- a/index.html
+++ b/index.html
@@ -107,8 +107,40 @@
                 height="260"
               />
               <div class="team-container">
-              <h3 class="team-item-title">Mark Guerrero</h3>
-              <p class="team-item-text">Product Designer</p>
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+                <div class="social-media">
+                  <ul class="icon-list">
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-inst"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twit"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-fbook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-in"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -120,8 +152,40 @@
                 height="260"
               />
               <div class="team-container">
-              <h3 class="team-item-title">Tom Ford</h3>
-              <p class="team-item-text">Frontend Developer</p>
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+                <div class="social-media">
+                  <ul class="icon-list">
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-inst"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twit"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-fbook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-in"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -133,8 +197,40 @@
                 height="260"
               />
               <div class="team-container">
-              <h3 class="team-item-title">Camila Garcia</h3>
-              <p class="team-item-text">Marketing</p>
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+                <div class="social-media">
+                  <ul class="icon-list">
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-inst"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twit"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-fbook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-in"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -146,8 +242,40 @@
                 height="260"
               />
               <div class="team-container">
-              <h3 class="team-item-title">Daniel Wilson</h3>
-              <p class="team-item-text">UI Designer</p>
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+                <div class="social-media">
+                  <ul class="icon-list">
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-inst"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twit"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-fbook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a class="icon-link" href="">
+                        <svg class="icon-image" width="16" height="16">
+                          <use href="./images/icons.svg#icon-in"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
