--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <section class="work">
         <div class="container">
           <h2 class="visually-hidden">Our Work</h2>
+
           <ul class="work-list">
             <li class="work-item">
               <h3 class="work-item-title">Strategy</h3>
@@ -371,6 +372,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-sm">
+        <h3 class="footer-sm-title">Social media</h3>
+        <ul class="footer-sm-list">
+          <li class="footer-sm-item">
+            <a class="footer-sm-link" href="">
+              <svg class="footer-sm-icon" width="24" height="24">
+                <use href="./images/footericons.svg#footer-icon-inst"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-sm-item">
+            <a class="footer-sm-link" href="">
+              <svg class="footer-sm-icon" width="24" height="24">
+                <use href="./images/footericons.svg#footer-icon-twit"></use>
+              </svg>
+            </a>  
+          </li>
+          <li class="footer-sm-item">
+            <a class="footer-sm-link" href="">
+              <svg class="footer-sm-icon" width="24" height="24">
+                <use href="./images/footericons.svg#footer-icon-fbook"></use> 
+              </svg>
+            </a>
+          </li>
+          <li class="footer-sm-item">
+            <a class="footer-sm-link" href="">
+              <svg class="footer-sm-icon" width="24" height="24">
+                <use href="./images/footericons.svg#footer-icon-in"></use>
+              </svg>
+            </a>
+          </li> 
+        </ul>
       </div>
     </footer>
   </body>
