--- a/index.html
+++ b/index.html
@@ -379,28 +379,28 @@
           <li class="footer-sm-item">
             <a class="footer-sm-link" href="">
               <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/footericons.svg#footer-icon-inst"></use>
+                <use href="./images/icons.svg#icon-inst"></use>
               </svg>
             </a>
           </li>
           <li class="footer-sm-item">
             <a class="footer-sm-link" href="">
               <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/footericons.svg#footer-icon-twit"></use>
-              </svg>
+                <use href="./images/icons.svg#icon-twit"></use>
+              </svg>    
             </a>  
           </li>
           <li class="footer-sm-item">
             <a class="footer-sm-link" href="">
               <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/footericons.svg#footer-icon-fbook"></use> 
+                <use href="./images/icons.svg#icon-fbook"></use> 
               </svg>
             </a>
           </li>
           <li class="footer-sm-item">
             <a class="footer-sm-link" href="">
               <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/footericons.svg#footer-icon-in"></use>
+                <use href="./images/icons.svg#icon-in"></use>
               </svg>
             </a>
           </li> 
