--- a/index.html
+++ b/index.html
@@ -365,46 +365,48 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-sm">
-        <h3 class="footer-sm-title">Social media</h3>
-        <ul class="footer-sm-list">
-          <li class="footer-sm-item">
-            <a class="footer-sm-link" href="">
-              <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-inst"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-sm-item">
-            <a class="footer-sm-link" href="">
-              <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twit"></use>
-              </svg>    
-            </a>  
-          </li>
-          <li class="footer-sm-item">
-            <a class="footer-sm-link" href="">
-              <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-fbook"></use> 
-              </svg>
-            </a>
-          </li>
-          <li class="footer-sm-item">
-            <a class="footer-sm-link" href="">
-              <svg class="footer-sm-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-in"></use>
-              </svg>
-            </a>
-          </li> 
-        </ul>
+        <div class="ws-container">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-sm">
+          <p class="footer-sm-text">Social media</p>
+          <ul class="footer-sm-list">
+            <li class="footer-sm-item">
+              <a class="footer-sm-link" href="">
+                <svg class="footer-sm-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-sm-item">
+              <a class="footer-sm-link" href="">
+                <svg class="footer-sm-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-sm-item">
+              <a class="footer-sm-link" href="">
+                <svg class="footer-sm-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-fbook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-sm-item">
+              <a class="footer-sm-link" href="">
+                <svg class="footer-sm-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
