--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-wrapper">
         <div class="ws-container">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
