--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
       <section class="work">
         <div class="container">
           <h2 class="visually-hidden">Our Work</h2>
-
           <ul class="work-list">
             <li class="work-item">
+              <div class="work-container-icon">
+                <svg class="work-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="work-item-title">Strategy</h3>
               <p class="work-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +75,11 @@
               </p>
             </li>
             <li class="work-item">
+              <div class="work-container-icon">
+                <svg class="work-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="work-item-title">Punctuality</h3>
               <p class="work-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +87,11 @@
               </p>
             </li>
             <li class="work-item">
+              <div class="work-container-icon">
+                <svg class="work-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="work-item-title">Diligence</h3>
               <p class="work-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -85,6 +99,11 @@
               </p>
             </li>
             <li class="work-item">
+              <div class="work-container-icon">
+                <svg class="work-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="work-item-title">Technologies</h3>
               <p class="work-item-text">
                 Design practice focused on digital experiences. We bring forth a
