--- a/index.html
+++ b/index.html
@@ -129,32 +129,32 @@
               <div class="team-container">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
-                <div class="social-media">
+                <div class="team-social-media">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-inst"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twit"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-fbook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-in"></use>
                         </svg>
                       </a>
@@ -174,32 +174,32 @@
               <div class="team-container">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
-                <div class="social-media">
+                <div class="team-social-media">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-inst"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twit"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-fbook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-in"></use>
                         </svg>
                       </a>
@@ -219,32 +219,32 @@
               <div class="team-container">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
-                <div class="social-media">
+                <div class="team-social-media">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="teteam-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-inst"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="teteam-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twit"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="teteam-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-fbook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="teteam-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-in"></use>
                         </svg>
                       </a>
@@ -264,32 +264,32 @@
               <div class="team-container">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
-                <div class="social-media">
+                <div class="team-social-media">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-inst"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twit"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-fbook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="icon-item">
                       <a class="icon-link" href="">
-                        <svg class="icon-image" width="16" height="16">
+                        <svg class="team-sm-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-in"></use>
                         </svg>
                       </a>
