--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="team-container">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
-                <div class="team-social-media">
+                <div class="team-sm-wrapper">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
@@ -174,7 +174,7 @@
               <div class="team-container">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
-                <div class="team-social-media">
+                <div class="team-sm-wrapper">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
@@ -219,7 +219,7 @@
               <div class="team-container">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
-                <div class="team-social-media">
+                <div class="team-sm-wrapper">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
@@ -264,7 +264,7 @@
               <div class="team-container">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
-                <div class="team-social-media">
+                <div class="team-sm-wrapper">
                   <ul class="icon-list">
                     <li class="icon-item">
                       <a class="icon-link" href="">
