--- a/index.html
+++ b/index.html
@@ -129,36 +129,36 @@
               <div class="team-container">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
-                  <ul class="icon-list">
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-inst"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twit"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-fbook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-in"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul> 
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fbook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -172,36 +172,36 @@
               <div class="team-container">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
-                  <ul class="icon-list">
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-inst"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twit"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-fbook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-in"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fbook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -215,36 +215,36 @@
               <div class="team-container">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
-                  <ul class="icon-list">
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="teteam-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-inst"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="teteam-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twit"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="teteam-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-fbook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="teteam-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-in"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="teteam-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="teteam-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="teteam-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fbook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="teteam-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -258,36 +258,36 @@
               <div class="team-container">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
-                  <ul class="icon-list">
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-inst"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twit"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-fbook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a class="icon-link" href="">
-                        <svg class="team-sm-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-in"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fbook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="team-sm-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -299,72 +299,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img5.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img5.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img6.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img7.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img7.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img8.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img8.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img10.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="image-animation">
+                <img
+                  src="./images/img10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="image-animation-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
